# CG_Praktikum

./: .gitignore  CMakeLists.txt
CG_Praktikum_1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  openglwindow.cpp
CG_Praktikum_1/ControlWidget/: controlWidget.cpp  controlWidget.hpp  controlWidget.ui
CG_Praktikum_2/: CMakeLists.txt  main.cpp  mainwindow.cpp
CG_Praktikum_2/MainWindow/: CMakeLists.txt  mainWindow.cpp  mainWindow.hpp  mainWindow.ui  openGLWindow.cpp  openGLWindow.hpp
CG_Praktikum_2/Sunsystem/: CMakeLists.txt  sunsystem.cpp  sunsystem.hpp  tree.hpp
CG_Praktikum_3/: CMakeLists.txt  QtOpenGLExample.pro  main.cpp  mainwindow.cpp  mainwindow.h
CG_Praktikum_3/ControlWidget/: controlWidget.ui
CG_Praktikum_3/Resources/: vertexShader.glsl
CG_Praktikum_3/Sunsystem/: fileLoader.cpp  fileLoader.hpp
CG_Praktikum_4/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  openglwindow.cpp  openglwindow.h
CG_Praktikum_4/ControlWidget/: controlWidget.hpp  controlWidget.ui
CG_Praktikum_4/Resources/: CMakeLists.txt  fragmentShader.glsl  vertexShader.glsl
CG_Praktikum_4/Sunsystem/: sunsystem.hpp
